--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<h1>test</h1>
-Проверка работоспособности
-Как это все работает???
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>TEst</title>
+</head>
+<body>
+<h1>проверка работы выгрузки на сервер</h1>
+<p>Должно все получиться</p>
+</body>
+</html>
