Тестим еще одну выгрузку

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>проверка работы выгрузки на сервер</h1>
-                <p>Должно все получиться</p>
+                <p>Должно все получиться </p>
+                <div class="alert alert-success" role="alert">
+                    <a href="#" class="alert-link">Тестируем еще раз. Тепе все должно получиться.</a>
+                </div>
                 <span class="label label-default">Default</span>
                 <span class="label label-primary">Primary</span>
                 <span class="label label-success">Success</span>
