--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>проверка работы выгрузки на сервер</h1>
-                <p>Должно все получиться </p>
+
                 <div class="alert alert-success" role="alert">
                     <a href="#" class="alert-link">Тестируем еще раз. Тепе все должно получиться.</a>
                 </div>
+                <p>Должно все получиться </p>
                 <span class="label label-default">Default</span>
                 <span class="label label-primary">Primary</span>
                 <span class="label label-success">Success</span>
                 <span class="label label-info">Info</span>
                 <span class="label label-warning">Warning</span>
                 <span class="label label-danger">Danger</span>
+                <p>Дальше работа над этим приложением будет продолжаться только так.</p>
             </div>
         </div>
     </div>
